--- a/templates/admin/users/create.html
+++ b/templates/admin/users/create.html
@@ -1,62 +1,46 @@
 {% extends 'layout.html' %}
 {% set title = "Create user" %}
 {% block content %}
-<div class="w-full max-w-full px-3 shrink-0 md:flex-0">
-            <form method="post" action="{{ url_for('admin.users.store') }}" class="relative flex flex-col min-w-0 break-words bg-white border-0 shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
-              <div class="border-black/12.5 rounded-t-2xl border-b-0 border-solid p-6 pb-0">
-                <div class="flex items-center">
-                    <div class=" md:w-8/12">
-                           {% include 'partials/error_msg.html' %}
-                    </div>
-                     <div class="w-full md:w-4/12 flex justify-end space-x-2">
-                            <button type="submit" class="px-8 py-2 mb-4 ml-auto font-bold leading-normal text-center text-white align-right transition-all ease-in bg-blue-500 border-0 rounded-lg shadow-md cursor-pointer text-xs tracking-tight-rem hover:shadow-xs hover:-translate-y-px active:opacity-85">Save</button>
-                             <a href="{{ url_for('admin.users.index') }}" class="px-8 py-2 mb-4 ml-auto font-bold leading-normal text-center text-white align-right transition-all ease-in  bg-[#f5365c]  border-0 rounded-lg shadow-md cursor-pointer text-xs tracking-tight-rem hover:shadow-xs hover:-translate-y-px active:opacity-85">Cancel</a>
-
-                     </div>
-                    </div>
-              </div>
-              <div class="flex-auto p-6">
-                <p class="leading-normal uppercase dark:text-white dark:opacity-60 text-sm">User Information</p>
-                <div class="flex flex-wrap -mx-3">
-                      <div class="w-full max-w-full px-3 shrink-0 md:w-6/12 md:flex-0">
-                    <div class="mb-4">
-                      <label for="first name" class="inline-block mb-2 ml-1 font-bold text-xs text-slate-700 dark:text-white/80">First name</label>
-                      <input type="text" name="first_name" class="focus:shadow-primary-outline dark:bg-slate-850 dark:text-white text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding px-3 py-2 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-blue-500 focus:outline-none">
-                    </div>
-                  </div>
-                  <div class="w-full max-w-full px-3 shrink-0 md:w-6/12 md:flex-0">
-                    <div class="mb-4">
-                      <label for="last name" class="inline-block mb-2 ml-1 font-bold text-xs text-slate-700 dark:text-white/80">Last name</label>
-                      <input type="text" name="last_name" class="focus:shadow-primary-outline dark:bg-slate-850 dark:text-white text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding px-3 py-2 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-blue-500 focus:outline-none">
-                    </div>
-                  </div>
-                  <div class="w-full max-w-full px-3 shrink-0 md:w-6/12 md:flex-0">
-                    <div class="mb-4">
-                      <label for="email" class="inline-block mb-2 ml-1 font-bold text-xs text-slate-700 dark:text-white/80">Email address</label>
-                      <input type="email" name="email" class="focus:shadow-primary-outline dark:bg-slate-850 dark:text-white text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding px-3 py-2 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-blue-500 focus:outline-none">
-                    </div>
-                  </div>
-                 <div class="w-full max-w-full px-3 shrink-0 md:w-6/12 md:flex-0">
-                    <div class="mb-4">
-                      <label for="phone_number" class="inline-block mb-2 ml-1 font-bold text-xs text-slate-700 dark:text-white/80">Phone number</label>
-                      <input type="text" name="phone_number" class="focus:shadow-primary-outline dark:bg-slate-850 dark:text-white text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding px-3 py-2 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-blue-500 focus:outline-none">
-                    </div>
-                  </div>
-
-                     <div class="w-full max-w-full px-3 shrink-0 md:w-6/12 md:flex-0">
-                    <div class="mb-4">
-                      <label for="role" class="inline-block mb-2 ml-1 font-bold text-xs text-slate-700 dark:text-white/80">Role</label>
-                      <select name="role" class="focus:shadow-primary-outline dark:bg-slate-850 dark:text-white text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding px-3 py-2 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-blue-500 focus:outline-none">
-                          {% for role in roles %}
+ <h2 class="card-title">{{ title }}</h2>
+{% include 'partials/error_msg.html' %}
+ <form method="post" action="{{ url_for('admin.users.store') }}" class="row">
+      <div class="col-12">
+          <a href="{{ url_for('admin.users.index') }}" class="btn btn-light ms-2 rounded-3 float-end">Back</a>
+          <button type="submit" class="btn btn-primary rounded-3 float-end">Save</button>
+      </div>
+     <div class="col-6">
+         <div class="form-group">
+                <label for="first_name" class="form-label">First name</label>
+                <input type="text" name="first_name" class="form-control" id="first_name">
+         </div>
+     </div>
+      <div class="col-6">
+         <div class="form-group">
+                <label for="last_name" class="form-label">Last name</label>
+                <input type="text" name="last_name" class="form-control" id="last_name">
+         </div>
+     </div>
+     <div class="col-6">
+         <div class="form-group">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" name="email" class="form-control" id="email">
+         </div>
+     </div>
+     <div class="col-6">
+         <div class="form-group">
+                <label for="phone_number" class="form-label">Phone number</label>
+                <input type="text" name="phone_number" class="form-control" id="phone_number">
+         </div>
+     </div>
+     <div class="col-6">
+         <div class="form-group">
+                <label for="role" class="form-label">Role</label>
+                <select name="role" id="role" class="form-control">
+                     {% for role in roles %}
                                 <option value="{{ role.value }}">{{ role.value.replace('_', ' ') | title }}</option>
                           {% endfor %}
-                      </select>
-                    </div>
-                  </div>
-
-                </div>
-
-              </div>
-            </form>
-          </div>
+                </select>
+         </div>
+     </div>
+ </form>
 {% endblock %}
