--- a/templates/admin/auth/forgot-password.html
+++ b/templates/admin/auth/forgot-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in - {{ request.state.app_name }}</title>
+    <title>Forgot password - {{ request.state.app_name }}</title>
     <link href="{{ url_for('static', path='assets/css/bootstrap.min.css') }}" rel="stylesheet">
      <link href="{{ url_for('static', path='assets/css/font-awesome.min.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/style.css') }}" rel="stylesheet"/>
@@ -14,24 +14,17 @@
                     <div class="col-6">
                         <div class="card p-4">
                             <div class="card-body">
-                                <h3 class="card-title">Sign in - {{ request.state.app_name }}</h3>
+                                <h3 class="card-title">Forgot password - {{ request.state.app_name }}</h3>
                                  {% include 'partials/error_msg.html' %}
-                                 <form role="form" action="{{ request.url_for('login') }}" method="post">
-                                    <div class="mb-3">
+                                 <form role="form" action="#" method="post">
+                                     <div class="mb-3">
                                             <label for="email" class="form-label">Email address</label>
                                             <input type="email" name="email" class="form-control" id="email">
                                     </div>
                                      <div class="mb-3">
-                                            <label for="password" class="form-label">Password</label>
-                                            <input type="password" name="password" class="form-control" id="password">
-                                    </div>
-                                     <div class="mb-3">
                                          <div class="row">
-                                             <div class="col-6">
-                                                 <a href="{{ url_for('admin.forgot-password.form') }}">Forgot password?</a>
-                                             </div>
-                                             <div class="col-6 d-flex justify-content-end">
-                                                 <button type="submit" class="btn btn-primary rounded-3">Sign in</button>
+                                             <div class="col-12 d-flex justify-content-end">
+                                                 <button type="submit" class="btn btn-primary rounded-3">Submit</button>
                                              </div>
                                          </div>
                                      </div>
