--- a/templates/admin/partials/error_msg.html
+++ b/templates/admin/partials/error_msg.html
@@ -1,5 +1,5 @@
    {% if error_msg is defined and error_msg is not none %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert {{ error_class if error_class is defined and error_class is not none else 'alert-danger' }}" role="alert">
           {{ error_msg }}
     </div>
    {% endif %}
