--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Sign Out</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('admin.auth.logout') }}">Sign Out</a></li>
                         </ul>
                     </li>
                 </ul>
