--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -24,7 +24,7 @@
                             <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i> Profile
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('admin.users.edit', id=request.session['auth_id']) }}">Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin.auth.logout') }}">Sign Out</a></li>
                         </ul>
