--- a/templates/admin/auth/forgot-password.html
+++ b/templates/admin/auth/forgot-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot password - {{ request.state.app_name }}</title>
+    <title>{{ gettext('admin.forgot_password_title') }} - {{ request.state.app_name }}</title>
     <link href="{{ url_for('static', path='assets/css/bootstrap.min.css') }}" rel="stylesheet">
      <link href="{{ url_for('static', path='assets/css/font-awesome.min.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/style.css') }}" rel="stylesheet"/>
@@ -14,17 +14,17 @@
                     <div class="col-6">
                         <div class="card p-4">
                             <div class="card-body">
-                                <h3 class="card-title">Forgot password - {{ request.state.app_name }}</h3>
+                                <h3 class="card-title">{{ gettext('admin.forgot_password_title') }} - {{ request.state.app_name }}</h3>
                                  {% include 'partials/error_msg.html' %}
                                  <form role="form" action="#" method="post">
                                      <div class="mb-3">
-                                            <label for="email" class="form-label">Email address</label>
+                                            <label for="email" class="form-label">{{ gettext('admin.email') }}</label>
                                             <input type="email" name="email" class="form-control" id="email">
                                     </div>
                                      <div class="mb-3">
                                          <div class="row">
                                              <div class="col-12 d-flex justify-content-end">
-                                                 <button type="submit" class="btn btn-primary rounded-3">Submit</button>
+                                                 <button type="submit" class="btn btn-primary rounded-3">{{ gettext('admin.submit') }}</button>
                                              </div>
                                          </div>
                                      </div>
