--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -43,17 +43,17 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{ url_for('admin.dashboard') }}">
-                                <i class="fa fa-dashboard" aria-hidden="true"></i> Dashboard
+                                <i class="fa fa-dashboard" aria-hidden="true"></i> {{ gettext('admin.menu.dashboard')}}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.users.index') }}">
-                                <i class="fa fa-users" aria-hidden="true"></i> Users
+                                <i class="fa fa-users" aria-hidden="true"></i> {{ gettext('admin.menu.users')}}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.pages.index') }}">
-                                <i class="fa fa-file-text" aria-hidden="true"></i> Pages
+                                <i class="fa fa-file-text" aria-hidden="true"></i> {{ gettext('admin.menu.pages')}}
                             </a>
                         </li>
                     </ul>
