--- a/templates/admin/users/create.html
+++ b/templates/admin/users/create.html
@@ -1,40 +1,40 @@
 {% extends 'layout.html' %}
-{% set title = "Create user" %}
+{% set title = gettext('admin.users.create_user_title') %}
 {% block content %}
  <h2 class="card-title">{{ title }}</h2>
 {% include 'partials/error_msg.html' %}
  <form method="post" action="{{ url_for('admin.users.store') }}" class="row">
       <div class="col-12">
-          <a href="{{ url_for('admin.users.index') }}" class="btn btn-light ms-2 rounded-3 float-end">Back</a>
-          <button type="submit" class="btn btn-primary rounded-3 float-end">Save</button>
+          <a href="{{ url_for('admin.users.index') }}" class="btn btn-light ms-2 rounded-3 float-end">{{ gettext('admin.back') }}</a>
+          <button type="submit" class="btn btn-primary rounded-3 float-end">{{ gettext('admin.save') }}</button>
       </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="first_name" class="form-label">First name</label>
+                <label for="first_name" class="form-label">{{ gettext('admin.users.first_name') }}</label>
                 <input type="text" name="first_name" class="form-control" id="first_name">
          </div>
      </div>
       <div class="col-6">
          <div class="form-group">
-                <label for="last_name" class="form-label">Last name</label>
+                <label for="last_name" class="form-label">{{ gettext('admin.users.last_name') }}</label>
                 <input type="text" name="last_name" class="form-control" id="last_name">
          </div>
      </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label">{{ gettext('admin.users.email') }}</label>
                 <input type="email" name="email" class="form-control" id="email">
          </div>
      </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="phone_number" class="form-label">Phone number</label>
+                <label for="phone_number" class="form-label">{{ gettext('admin.users.phone') }}</label>
                 <input type="text" name="phone_number" class="form-control" id="phone_number">
          </div>
      </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="role" class="form-label">Role</label>
+                <label for="role" class="form-label">{{ gettext('admin.users.role') }}</label>
                 <select name="role" id="role" class="form-control">
                      {% for role in roles %}
                                 <option value="{{ role.value }}">{{ role.value.replace('_', ' ') | title }}</option>
