--- a/templates/admin/users/edit.html
+++ b/templates/admin/users/edit.html
@@ -1,38 +1,38 @@
 {% extends 'layout.html' %}
-{% set title = "Edit user - "+user.first_name+" "+user.last_name %}
+{% set title = gettext('admin.users.edit_user_title')+" - "+user.first_name+" "+user.last_name %}
 {% block content %}
 <form method="post" action="{{ url_for('admin.users.update', id=user.id) }}" class="row">
       <div class="col-12">
-          <a href="{{ url_for('admin.users.index') }}" class="btn btn-light ms-2 rounded-3 float-end">Back</a>
-          <button type="submit" class="btn btn-primary rounded-3 float-end">Save</button>
+          <a href="{{ url_for('admin.users.index') }}" class="btn btn-light ms-2 rounded-3 float-end">{{ gettext('admin.back') }}</a>
+          <button type="submit" class="btn btn-primary rounded-3 float-end">{{ gettext('admin.save') }}</button>
       </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="first_name" class="form-label">First name</label>
+                <label for="first_name" class="form-label">{{ gettext('admin.users.first_name') }}</label>
                 <input type="text" value="{{ user.first_name }}" name="first_name" class="form-control" id="first_name">
          </div>
      </div>
       <div class="col-6">
          <div class="form-group">
-                <label for="last_name" class="form-label">Last name</label>
+                <label for="last_name" class="form-label">{{ gettext('admin.users.last_name') }}</label>
                 <input type="text" value="{{ user.last_name }}" name="last_name" class="form-control" id="last_name">
          </div>
      </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label">{{ gettext('admin.users.email') }}</label>
                 <input type="email" value="{{ user.email }}" name="email" class="form-control" id="email">
          </div>
      </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="phone_number" class="form-label">Phone number</label>
+                <label for="phone_number" class="form-label">{{ gettext('admin.users.phone') }}</label>
                 <input type="text" value="{{ user.phone_number }}" name="phone_number" class="form-control" id="phone_number">
          </div>
      </div>
      <div class="col-6">
          <div class="form-group">
-                <label for="role" class="form-label">Role</label>
+                <label for="role" class="form-label">{{ gettext('admin.users.role') }}</label>
                 <select name="role" id="role" class="form-control">
                      {% for role in roles %}
                                 <option value="{{ role.value }}" {% if user.role.value == role.value %}selected{% endif %}>
